--- a/index.html
+++ b/index.html
@@ -822,7 +822,7 @@
 	<script src="assets/js/main.js"></script>
 
 	<!-- Firebase -->
-	<script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-app.js"></script>
+	<!-- <script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-app.js"></script>
 	<script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-analytics.js"></script>
 	<script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-auth.js"></script>
 	<script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-database.js"></script>
@@ -840,7 +840,7 @@
 	  // Initialize Firebase
 	  firebase.initializeApp(firebaseConfig);
 	  firebase.analytics();
-	</script>
+	</script> -->
 
 </body>
 
