--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 										    
 										</blockquote>
 										<p class="lead">
-											Hey there!! Am an Enthusiast looking for some fun opportunities. Being a computer enthusiast carved the way for my entry into a Bachelor degree in Technology with Computer Science as my major. Being a part of program exposes me to new fields and possibilities in technology on the daily basis.
+											Hey there! I am an Enthusiast looking for some fun opportunities. Being a computer enthusiast carved the way for my entry into a Bachelor degree in Technology with Computer Science as my major. Being a part of program exposes me to new fields and possibilities in technology on the daily basis.
 										</p>
 										<div class="justify-content-center" style="padding-top:30px">
 											<img src="assets/img/logos/html.png" title="HTML5" style="width:97px;padding-left:30px; padding-top:20px;">
