--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 				<ul>
 					<li><a class="nav-link scrollto" href="#hero">Home</a></li>
 					<li><a class="nav-link scrollto" href="#about">About</a></li>
-					<li><a class="nav-link scrollto" href="#team">My Team</a></li>
-					<!-- <li><a class="nav-link scrollto" href="#work">Portfolio</a></li> -->
+					<!-- <li><a class="nav-link scrollto" href="#team">My Team</a></li> -->
+					<li><a class="nav-link scrollto" href="#work">Portfolio</a></li>
 					<!-- <li><a class="nav-link scrollto" href="#blog">Blog</a></li> -->
 					<!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
 						<ul>
@@ -142,9 +142,9 @@
 										<div class="progress">
 											<div class="progress-bar" role="progressbar" style="width: 40%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
 										</div>
-										<span>PYTHON</span> <span class="pull-right">60%</span>
+										<span>PYTHON</span> <span class="pull-right">70%</span>
 										<div class="progress">
-											<div class="progress-bar" role="progressbar" style="width: 60%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+											<div class="progress-bar" role="progressbar" style="width: 70%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
 										</div>
 										<span>CPP</span> <span class="pull-right">60%</span>
 										<div class="progress">
@@ -373,7 +373,7 @@
 
 		<!-- ======= Portfolio Section ======= -->
 
-		<!-- <section id="work" class="portfolio-mf sect-pt4 route">
+		<section id="work" class="portfolio-mf sect-pt4 route"> 
 			<div class="container extra-padd-down">
 				<div class="row">
 					<div class="col-sm-12">
@@ -391,7 +391,7 @@
 				<div class="row">
 					<div class="col-md-4">
 						<div class="work-box">
-							<a href="https://cyberbuddy-manas.github.io/website-client-2/" target="_blank" data-gallery="portfolioGallery" >
+							<a href="https://github.com/lovishprabhakar02/vaccination-center-locator" target="_blank" data-gallery="portfolioGallery" >
 								<div class="work-img">
 									<img src="assets/img/work-2.png" alt="" class="img-fluid">
 								</div>
@@ -399,14 +399,14 @@
 							<div class="work-content">
 								<div class="row">
 									<div class="col-sm-8">
-										<h2 class="w-title">Portfolio Website</h2>
+										<h2 class="w-title">Vaccination Center Locator</h2>
 										<div class="w-more">
-											<span class="w-ctegory">Web Design</span> | <span class="w-date">19 May 2021</span>
+											<span class="w-ctegory">Python</span> | <span class="w-date">Oct 10, 2021</span>
 										</div>
 									</div>
 									<div class="col-sm-4">
 										<div class="w-like">
-											<a href="https://cyberbuddy-manas.github.io/website-client-2/" target="_blank"> <span class="bi bi-arrow-up-right-circle"></span></a>
+											<a href="https://github.com/lovishprabhakar02/vaccination-center-locator" target="_blank"> <span class="bi bi-arrow-up-right-circle"></span></a>
 										</div>
 									</div>
 								</div>
@@ -415,7 +415,7 @@
 					</div>
 					<div class="col-md-4">
 						<div class="work-box">
-							<a href="https://cyberbuddy-manas.github.io/website-client-1/" target="_blank" data-gallery="portfolioGallery">
+							<a href="https://github.com/lovishprabhakar02/Video-to-audio-convertor" target="_blank" data-gallery="portfolioGallery">
 								<div class="work-img">
 									<img src="assets/img/work-1.png" alt="" class="img-fluid">
 								</div>
@@ -423,14 +423,14 @@
 							<div class="work-content">
 								<div class="row">
 									<div class="col-sm-8">
-										<h2 class="w-title">Portfolio Website</h2>
+										<h2 class="w-title">Video to audio convertor</h2>
 										<div class="w-more">
-											<span class="w-ctegory">Web Design</span> | <span class="w-date">17 May 2021</span>
+											<span class="w-ctegory">Python</span> | <span class="w-date">Oct 15, 2021</span>
 										</div>
 									</div>
 									<div class="col-sm-4">
 										<div class="w-like">
-											<a href="https://cyberbuddy-manas.github.io/website-client-1/" target="_blank"> <span class="bi bi-arrow-up-right-circle"></span></a>
+											<a href="https://github.com/lovishprabhakar02/Video-to-audio-convertor" target="_blank"> <span class="bi bi-arrow-up-right-circle"></span></a>
 										</div>
 									</div>
 								</div>
@@ -439,7 +439,7 @@
 					</div>
 					<div class="col-md-4">
 						<div class="work-box">
-							<a href="https://cyberbuddy-manas.github.io/website-client-3/" target="_blank" data-gallery="portfolioGallery">
+							<a href="https://github.com/lovishprabhakar02/Motivator" target="_blank" data-gallery="portfolioGallery">
 								<div class="work-img">
 									<img src="assets/img/work-3.png" alt="" class="img-fluid">
 								</div>
@@ -447,20 +447,20 @@
 							<div class="work-content">
 								<div class="row">
 									<div class="col-sm-8">
-										<h2 class="w-title">Portfolio Website</h2>
+										<h2 class="w-title">Motivator</h2>
 										<div class="w-more">
-											<span class="w-ctegory">Web Design</span> | <span class="w-date">23 May 2021</span>
+											<span class="w-ctegory">Python</span> | <span class="w-date">23 May 2021</span>
 										</div>
 									</div>
 									<div class="col-sm-4">
 										<div class="w-like">
-											<a href="https://cyberbuddy-manas.github.io/website-client-3/" target="_blank"> <i class="bi bi-arrow-up-right-circle"></i></a>
+											<a href="https://github.com/lovishprabhakar02/Motivator" target="_blank"> <i class="bi bi-arrow-up-right-circle"></i></a>
 										</div>
 									</div>
 								</div>
 							</div>
 						</div>
-					</div> -->
+					</div>
 					<!-- <div class="col-md-4">
 						<div class="work-box">
 							<a href="assets/img/work-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
