--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 				<ul>
 					<li><a class="nav-link scrollto" href="#hero">Home</a></li>
 					<li><a class="nav-link scrollto" href="#about">About</a></li>
-					<!-- <li><a class="nav-link scrollto" href="#team">My Team</a></li> -->
+					<li><a class="nav-link scrollto" href="#team">My Team</a></li>
 					<li><a class="nav-link scrollto" href="#work">Portfolio</a></li>
 					<!-- <li><a class="nav-link scrollto" href="#blog">Blog</a></li> -->
 					<!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
