--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@
 					</div> -->
 				<!-- </div> -->
 			<!-- </div> -->
-		<!-- </section> -->
+		</section>
 
 		<!-- End Portfolio Section -->
 
