--- a/index.html
+++ b/index.html
@@ -423,14 +423,14 @@
 							<div class="work-content">
 								<div class="row">
 									<div class="col-sm-8">
-										<h2 class="w-title">Video to audio convertor</h2>
+										<h2 class="w-title">open-source-contributions-for-beginners</h2>
 										<div class="w-more">
-											<span class="w-ctegory">Python</span> | <span class="w-date">Oct 15, 2021</span>
+											<span class="w-ctegory">Git-GitHub</span> | <span class="w-date">Oct 15, 2021</span>
 										</div>
 									</div>
 									<div class="col-sm-4">
 										<div class="w-like">
-											<a href="https://github.com/lovishprabhakar02/Video-to-audio-convertor" target="_blank"> <span class="bi bi-arrow-up-right-circle"></span></a>
+											<a href="https://github.com/cyberbuddy-io/open-source-contribution-for-beginners" target="_blank"> <span class="bi bi-arrow-up-right-circle"></span></a>
 										</div>
 									</div>
 								</div>
