--- a/index.html
+++ b/index.html
@@ -435,14 +435,14 @@
 							<div class="work-content">
 								<div class="row">
 									<div class="col-sm-8">
-										<h2 class="w-title">open-source-contributions-for-beginners</h2>
+										<h2 class="w-title">Blogging Website Clone</h2>
 										<div class="w-more">
-											<span class="w-ctegory">Git-GitHub</span> | <span class="w-date">Oct 15, 2021</span>
+											<span class="w-ctegory">Front-end</span> | <span class="w-date">July 7, 2022</span>
 										</div>
 									</div>
 									<div class="col-sm-4">
 										<div class="w-like">
-											<a href="https://github.com/cyberbuddy-io/open-source-contribution-for-beginners" target="_blank"> <span class="bi bi-arrow-up-right-circle"></span></a>
+											<a href="https://lovishprabhakar.github.io/hevo-blog-clone/MDBvsSQL.html" target="_blank"> <span class="bi bi-arrow-up-right-circle"></span></a>
 										</div>
 									</div>
 								</div>
